feat: commit code

--- a/Tetris/styles.less
+++ b/Tetris/styles.less
@@ -1,16 +1,23 @@
-.container {
-    position: relative;
-    .row {
-        .block-container {
-            box-sizing: border-box;
-            width: 20px;
-            height: 20px;
-            position: absolute;
-            display: inline-block;
-            border: 1px solid #858585;
-        }
-        .block {
-            background: red;
+.page {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .container {
+        // width: 200px;
+        // height: 400px;
+        position: relative;
+        .row {
+            .block-container {
+                box-sizing: border-box;
+                width: 20px;
+                height: 20px;
+                position: absolute;
+                display: inline-block;
+                border: 1px solid #858585;
+            }
+            .block {
+                background: red;
+            }
         }
     }
 }
