feat: finish tetris

--- a/Tetris/styles.less
+++ b/Tetris/styles.less
@@ -1,6 +1,11 @@
 @SIZE: 40;
 
+body {
+    overscroll-behavior: none;
+}
+
 .page {
+    scroll-behavior: smooth;
     display: flex;
     align-items: center;
     justify-content: center;
