feat: 2048 add move function

--- a/2048/styles.less
+++ b/2048/styles.less
@@ -13,19 +13,17 @@ body {
     .container {
         position: relative;
         width: 4 * @SIZE * 1px;
-        .row {
-            .block-container {
-                font-size: 30px;
-                box-sizing: border-box;
-                width: @SIZE * 1px;
-                height: @SIZE * 1px;
-                position: absolute;
-                display: inline-flex;
-                align-items: center;
-                justify-content: center;
-                border: 1px solid red;
-                transition: all 0.3s ease-in;
-            }
+        .block {
+            font-size: 40px;
+            box-sizing: border-box;
+            width: @SIZE * 1px;
+            height: @SIZE * 1px;
+            position: absolute;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            // border: 1px solid red;
+            transition: all 0.1s ease-in;
         }
     }
 }
