--- a/styles/reset.css
+++ b/styles/reset.css
@@ -3,6 +3,10 @@
    License: none (public domain)
 */
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body,
 div,
@@ -86,10 +90,6 @@ audio,
 video {
     margin: 0;
     padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article,
