feat: 2048 add background

--- a/2048/styles.less
+++ b/2048/styles.less
@@ -61,6 +61,11 @@ body {
     .container {
         position: relative;
         width: 4 * @SIZE * 1px;
+        height: 4 * @SIZE * 1px;
+        touch-action: none;
+        background: #bbada0;
+        border-radius: 6px;
+
         .block {
             font-size: 40px;
             box-sizing: border-box;
